@@ -2,13 +2,12 @@
 # FOR THE TESTS WITH A LOCAL DATA API: #
 ########################################
 
-# Authentication. Choose either:
-export LOCAL_DATA_API_APPLICATION_TOKEN="Cassandra:Y2Fzc2FuZHJh:Y2Fzc2FuZHJh"
-# Or:
+# Authentication:
 export LOCAL_DATA_API_USERNAME="cassandra"
 export LOCAL_DATA_API_PASSWORD="cassandra"
 
 export LOCAL_DATA_API_ENDPOINT="http://localhost:8181"
+export LOCAL_CASSANDRA_CONTACT_POINT="127.0.0.1"
 
 # OPTIONAL: (if defined here, they will be created as needed)
 export LOCAL_DATA_API_KEYSPACE="default_keyspace"
