@@ -14,6 +14,7 @@ maintenance: switched to uv (from poetry)
 maintenance: promoted findAndRerank testing to the 'regular' IT (adjusted readme and env templates accordingly)
 maintenance: pin h11 to 0.16.0 or higher (after a vulnerability report)
 maintenance: switch to latest HCD for non-Astra CI github action
+maintenance: introduce CQL-driven testing for low/no-support table columns. `LOCAL_DATA_API_APPLICATION_TOKEN` local test auth not supported anymore.
 
 v 2.0.1
 =======
